# geoda

./: .clang-format  .gitignore  .gitmodules  .travis.yml  APPIMAGE_BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  DbfFile.cpp  DbfFile.h  DefaultVarsPtree.cpp  DefaultVarsPtree.h  Dockerfile  FramesManager.cpp  FramesManager.h  FramesManagerObserver.h  GdaCartoDB.cpp  GdaCartoDB.h  GdaConst.cpp  GdaConst.h  GdaException.h  GdaJson.cpp  GdaJson.h  GdaShape.cpp  GdaShape.h  GenColor.cpp  GenColor.h  GenGeomAlgs.cpp  GenGeomAlgs.h  GenUtils.cpp  GenUtils.h  GeneralWxUtils.cpp  GeneralWxUtils.h  GeoDa-Info.plist  GeoDa.cpp  GeoDa.h  GeoDa.md  GeoDa.rc  GeoDa.vcproj  (+64 more)
Algorithms/: DataUtils.h  GNUmakefile  README.md  S.h  azp.cpp  azp.h  cluster.cpp  cluster.h  dbscan.cpp  dbscan.h  distanceplot.cpp  distanceplot.h  distmat_kernel.cl  distmatrix.cpp  distmatrix.h  dqrsl.c  dsvdc.c  fastcluster.cpp  fastcluster.h  files.txt  geocoding.cpp  geocoding.h  gpu_lisa.cpp  gpu_lisa.h  hdbscan.cpp  hdbscan.h  jacobi.c  joincount_ratio.cpp  joincount_ratio.h  lapacke.c  linpack_lite.c  linpack_lite.f  lisa_kernel.cl  localjc_kernel.cl  loess.c  loess.h  loessc.c  loessf.c  maxp.cpp  maxp.h  (+30 more)
BuildTools/: build_reactgeoda.sh
DataViewer/: CustomClassifPtree.cpp  CustomClassifPtree.h  DataChangeType.cpp  DataChangeType.h  DataSource.cpp  DataSource.h  DataViewerAddColDlg.cpp  DataViewerAddColDlg.h  DataViewerDeleteColDlg.cpp  DataViewerDeleteColDlg.h  DataViewerEditFieldPropertiesDlg.cpp  DataViewerEditFieldPropertiesDlg.h  DataViewerResizeColDlg.cpp  DataViewerResizeColDlg.h  DbfColContainer.cpp  DbfColContainer.h  DbfGridTableBase.cpp  DbfTable.cpp  DbfTable.h  MergeTableDlg.cpp  MergeTableDlg.h  OGRColumn.cpp  OGRColumn.h  OGRTable.cpp  OGRTable.h  OGRTableOperation.cpp  OGRTableOperation.h  PtreeInterface.h  TableBase.cpp  TableBase.h  TableFrame.cpp  TableFrame.h  TableInterface.cpp  TableInterface.h  TableState.cpp  TableState.h  TableStateObserver.h  TimeState.cpp  TimeState.h  TimeStateObserver.h  (+6 more)
DialogTools/: 3DControlPan.cpp  3DControlPan.h  ASC2SHPDlg.cpp  ASC2SHPDlg.h  AZPDlg.cpp  AZPDlg.h  AbstractClusterDlg.cpp  AbstractClusterDlg.h  AddIdVariable.cpp  AddIdVariable.h  AdjustYAxisDlg.cpp  AdjustYAxisDlg.h  AggregateDlg.cpp  AggregateDlg.h  AutoCompTextCtrl.cpp  AutoCompTextCtrl.h  AutoUpdateDlg.cpp  AutoUpdateDlg.h  BasemapConfDlg.cpp  BasemapConfDlg.h  Bnd2ShpDlg.cpp  Bnd2ShpDlg.h  CalculatorDlg.cpp  CalculatorDlg.h  CatClassifDlg.cpp  CatClassifDlg.h  ConnectDatasourceDlg.cpp  ConnectDatasourceDlg.h  CreateGridDlg.cpp  CreateGridDlg.h  CreateSpTmProjectDlg.h  CreatingWeightDlg.cpp  CreatingWeightDlg.h  CsvFieldConfDlg.cpp  CsvFieldConfDlg.h  DBScanDlg.cpp  DBScanDlg.h  DataMovieDlg.cpp  DataMovieDlg.h  DatasourceDlg.cpp  (+122 more)
Explore/: 3DPlotView.cpp  3DPlotView.h  AbstractClusterMap.cpp  AbstractClusterMap.h  AbstractCoordinator.cpp  AbstractCoordinator.h  AnimatePlotCanvas.cpp  AnimatePlotCanvas.h  Basemap.cpp  Basemap.h  BoxNewPlotView.cpp  BoxNewPlotView.h  CartogramNewView.cpp  CartogramNewView.h  CatClassifManager.cpp  CatClassifManager.h  CatClassifState.cpp  CatClassifState.h  CatClassifStateObserver.h  CatClassification.cpp  CatClassification.h  ClusterMatchMapView.cpp  ClusterMatchMapView.h  ColocationMapView.cpp  ColocationMapView.h  ConditionalBoxPlotView.cpp  ConditionalBoxPlotView.h  ConditionalClusterMapView.cpp  ConditionalClusterMapView.h  ConditionalHistogramView.cpp  ConditionalHistogramView.h  ConditionalMapView.cpp  ConditionalMapView.h  ConditionalNewView.cpp  ConditionalNewView.h  ConditionalScatterPlotView.cpp  ConditionalScatterPlotView.h  ConnectivityHistView.cpp  ConnectivityHistView.h  ConnectivityMapView.cpp  (+95 more)
Generic/: GdaShape.h  HighlightState.cpp  HighlightStateObserver.h  Observable.h  TestMapView.h  TestScrollWinView.cpp  TestTableView.h
GeoDa.xcodeproj/: project.pbxproj
Regression/: DenseMatrix.cpp  DenseMatrix.h  DenseVector.cpp  DenseVector.h  DiagnosticReport.cpp  DiagnosticReport.h  Link.h  Lite2.h  ML_im.cpp  ML_im.h  PowerLag.cpp  PowerLag.h  PowerSymLag.cpp  PowerSymLag.h  SparseMatrix.cpp  SparseMatrix.h  SparseRow.cpp  SparseRow.h  SparseVector.cpp  SparseVector.h  Weights.cpp  Weights.h  clapack.h  mix.cpp  mix.h  polym.h  smile.h  smile2.cpp
SampleData/: 4pt.dbf  9-pts-tall.shp  Untitled.csv  Untitled.gal  Untitled.gda  box.dbf  box.shp  colmunic_st.shp  colmunic_st_time.dbf  columbus.gal  columbus.gda  columbus_rk.gal  columbus_thres_xy.gwt  nat.dbf  nat.gal  nat_st.dbf  proj_columbus.gda  proj_nat.gda  proj_nat_st.gda  test_init.sh
ShapeOperations/: AbstractShape.h  BasePoint.cpp  BasePoint.h  Box.cpp  Box.h  CsvFileUtils.cpp  CsvFileUtils.h  DBF.cpp  DbfFile.h  DorlingCartogram.cpp  DorlingCartogram.h  GalWeight.cpp  GalWeight.h  GdaCache.cpp  GdaCache.h  GeodaWeight.cpp  GeodaWeight.h  GwtWeight.cpp  GwtWeight.h  Lowess.cpp  Lowess.h  OGRDataAdapter.cpp  OGRDataAdapter.h  OGRDatasourceProxy.cpp  OGRDatasourceProxy.h  OGRFieldProxy.cpp  OGRFieldProxy.h  OGRLayerProxy.cpp  OGRLayerProxy.h  PolysToContigWeights.cpp  PolysToContigWeights.h  Randik.cpp  Randik.h  RateSmoothing.cpp  RateSmoothing.h  ShapeFile.cpp  ShapeFile.h  ShapeFileHdr.cpp  ShapeFileTriplet.cpp  ShapeFileTypes.h  (+24 more)
VarCalc/: CalcHelp.cpp  CalcHelp.h  GNUmakefile  GdaFlexValue.cpp  GdaFlexValue.h  GdaLexer.cpp  GdaLexer.h  GdaParser.cpp  GdaParser.h  NumericTests.cpp  NumericTests.h  WeightsManInterface.h  WeightsMetaInfo.cpp  WeightsMetaInfo.h
Weights/: BlockWeights.cpp  BlockWeights.h  DistUtils.cpp  DistUtils.h
_dump/: ASC2SHPDlg.h  AbstractShape.cpp  Box.cpp  DBF.cpp  DBF.h  DbfColContainer.h  DbfTable.cpp  DbfTable.h  SHP2ASCDlg.cpp  SHP2ASCDlg.h  ShapeFileHdr.cpp  ShapeFileHdr.h  ShapeFileTriplet.h  ShpFile.cpp  (+1 more)
tests/: CMakeLists.txt  test-boost-utils.cpp  test-geom-utils.cpp  test-webgl-map.cpp
tests/data/: guerry.arrow  guerry.geojson  line.geojson  multiline.geojson  multipoint.geojson  multipolygon.geojson  point.geojson  polygon.geojson
tests/python/: wkt_geometry.py
trunk/BuildTools/macosx/dep/libkml/: configure.ac
(+1036 files in other folders)
